# wechat-task-agent-demo-submission

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
agent/: dedupe.py  env.py  extractor_base.py  extractor_llm.py  extractor_text_fixture.py  models.py  normalizer.py  presentation.py  prompts.py  storage.py  workflow.py
app/: main.py  routes.py  scheduler.py
data/text_fallback/: 10am.txt  12pm.txt  2pm.txt  done_update.txt
docs/: ARCHITECTURE.md  DEBUG_RUNBOOK.md  DECISIONS.md  LLM_SMOKE_TEST.md  PRODUCTION_EXTENSION.md  PROMPT_DESIGN.md  UI_AUDIT.md  WORKLOG.md
reports/: demo_qa_report.json  extractor_compare_report.json
scripts/: demo_qa.py  extractor_compare.py  llm_smoke.py
static/: app.css  app.js
templates/: index.html  layout.html
templates/partials/: evidence.html  ingestion_runs.html  needs_review.html  overview.html  project_tasks.html  task_card.html  today_todo.html
tests/: test_dashboard_evidence.py  test_dedupe.py  test_due_parser.py  test_llm_prompt_and_env.py  test_make_qa_or_workflow_report.py  test_self_mentions.py  test_status_keywords.py  test_workflow_incremental.py
