[project]
name = "wechat-task-agent-demo"
version = "0.1.0"
description = "Compact AI workflow demo for WeChat screenshot/text task ingestion."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "jinja2>=3.1",
  "openai>=2.0",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "agent*"]
exclude = ["data*", "static*", "templates*", "docs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
